pure css applied

--- a/index.html
+++ b/index.html
@@ -4,172 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hielie</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body {
-        transition: background-color 0.3s ease;
-      }
-      body.light-mode {
-        background-color: #ffffff;
-      }
-      body.dark-mode {
-        background-color: #242223;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="dark-mode">
+  <body>
     <!-- Navigation -->
-    <nav class="bg-transparent text-white w-full z-20 top-0">
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 border-b border-gray-600"
-      >
+    <nav class="navbar">
+      <div class="navbar-container">
         <!-- Logo Section -->
-        <a href="#" class="text-3xl font-extrabold">HIE.LI</a>
-
-        <!-- Hamburger Menu Button -->
-        <button
-          type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-          aria-controls="navbar-default"
-          aria-expanded="false"
-          onclick="document.getElementById('navbar-default').classList.toggle('hidden')"
-        >
-          <span class="sr-only">Open main menu</span>
-          <svg
-            class="w-5 h-5"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 17 14"
-            aria-hidden="true"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15"
-            />
-          </svg>
-        </button>
+        <a href="#" class="navbar-logo">HIE.LI</a>
 
         <!-- Navigation Links -->
-        <div
-          id="navbar-default"
-          class="hidden w-full md:flex md:items-center md:w-auto"
-        >
-          <ul
-            class="flex flex-col md:flex-row md:space-x-8 md:mt-0 font-semibold text-white"
-          >
-            <li>
-              <a
-                href="#"
-                class="block py-2 px-3 text-yellow-600 hover:text-yellow-500"
-                >COMPRESSOR</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 px-3 text-white hover:text-yellow-500"
-                >CONVERTER</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 px-3 text-white hover:text-yellow-500"
-                >SHORTENER</a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-menu">
+          <li><a href="#" class="navbar-link active">COMPRESSOR</a></li>
+          <li><a href="#" class="navbar-link">CONVERTER</a></li>
+          <li><a href="#" class="navbar-link">SHORTENER</a></li>
+        </ul>
 
         <!-- Login Button -->
-        <div>
-          <button
-            type="button"
-            class="bg-yellow-600 hover:bg-yellow-500 text-black font-bold rounded-full text-sm px-6 py-2"
-          >
-            LOGIN
-          </button>
-        </div>
+        <button class="login-button">LOGIN</button>
       </div>
     </nav>
 
     <!-- Main Content -->
-    <div class="container mx-auto text-center py-16">
-      <img src="/bg_jpg.jpg" alt="Illustration" class="mx-auto mb-6 w-80" />
-      <div class="relative w-1/2 mx-auto">
+    <div class="main-content">
+      <img src="/bg_jpg.jpg" alt="Illustration" class="illustration" />
+      <div class="input-container">
         <input
           type="text"
           placeholder="Paste your link here"
-          class="w-full px-5 py-3 bg-gray-500/10 text-white placeholder-white rounded-full"
+          class="input-field"
         />
-
-        <button
-          type="button"
-          class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-white text-black font-black px-6 py-1 rounded-full hover:bg-yellow-600"
-        >
-          CREATE
-        </button>
+        <button class="create-button">CREATE</button>
       </div>
-      <p class="mt-6 text-gray-500 max-w-xl mx-auto text-sm">
+      <p class="description">
         Lorem ipsum is simply dummy text of the printing and typesetting
         industry. Lorem ipsum has been the industry's standard dummy text.
       </p>
     </div>
 
     <!-- Brands Section -->
-    <div class="bg-transparent py-10 sm:py-16">
-      <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <h2 class="text-center text-xl font-thin text-white opacity-30">
-          The most recognized brands in the world love
-          <span class="font-normal text-white font-bold">hie.li</span>
-        </h2>
-        <div
-          class="mx-auto mt-10 flex items-center justify-between gap-x-8 overflow-hidden"
-        >
-          <img
-            alt="h1bvisa"
-            src="./logos/h1bvisa.png"
-            class="max-h-12 w-auto object-contain opacity-20 hover:opacity-100 transition-opacity duration-300"
-          />
-          <img
-            alt="HireITGlobal"
-            src="./logos/HireITGlobal.png"
-            class="max-h-12 w-auto object-contain opacity-20 hover:opacity-100 transition-opacity duration-300"
-          />
-          <img
-            alt="HIT_Logo"
-            src="./logos/HIT_Logo.png"
-            class="max-h-12 w-auto object-contain opacity-20 hover:opacity-100 transition-opacity duration-300"
-          />
-          <img
-            alt="Immigration"
-            src="./logos/Hotskills_Regular@2x.png"
-            class="max-h-12 w-auto object-contain opacity-20 hover:opacity-100 transition-opacity duration-300"
-          />
-          <img
-            alt="Staffingly"
-            src="./logos/Immigration and Jobs Talk Show.png"
-            class="max-h-12 w-auto object-contain opacity-50 hover:opacity-100 transition-opacity duration-300"
-          />
-        </div>
+    <div class="brands-section">
+      <div class="brands-container">
+        <img src="./logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
+        <img src="./logos/hotrecruiter.png" alt="Brand 2" class="brand-logo" />
+        <img src="./logos/hotemailer.png" alt="Brand 3" class="brand-logo" />
+        <img src="./logos/revoia.png" alt="Brand 4" class="brand-logo" />
+        <img src="./logos/vesaservices.png" alt="Brand 5" class="brand-logo" />
       </div>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-black text-gray-500 py-5">
-      <div class="container mx-auto text-center">
-        <div class="flex flex-wrap justify-center space-x-6 mb-4">
-          <img src="./facebook.png" alt="Facebook" class="h-6" />
-          <img src="./facebook-messenger.png" alt="Messenger" class="h-6" />
-          <img src="./telegram.png" alt="Telegram" class="h-6" />
-        </div>
-        <p class="text-sm text-gray-500">
-          Copyright &copy; 2024 hie.li. All rights reserved.
-        </p>
-      </div>
+    <footer class="footer">
+      <p class="footer-text">
+        Copyright &copy; 2024 <a href="#">hie.li</a>. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
