--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hielie</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- Navigation -->
-    <nav class="navbar">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hielie</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="container">
       <div class="navbar-container">
         <!-- Logo Section -->
         <a href="#" class="navbar-logo">HIE.LI</a>
@@ -23,41 +26,39 @@
         <!-- Login Button -->
         <button class="login-button">LOGIN</button>
       </div>
-    </nav>
-
-    <!-- Main Content -->
-    <div class="main-content">
-      <img src="/bg_jpg.jpg" alt="Illustration" class="illustration" />
-      <div class="input-container">
-        <input
-          type="text"
-          placeholder="Paste your link here"
-          class="input-field"
-        />
-        <button class="create-button">CREATE</button>
-      </div>
-      <p class="description">
-        Lorem ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem ipsum has been the industry's standard dummy text.
-      </p>
     </div>
+  </nav>
 
-    <!-- Brands Section -->
-    <div class="brands-section">
-      <div class="brands-container">
-        <img src="./logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
-        <img src="./logos/hotrecruiter.png" alt="Brand 2" class="brand-logo" />
-        <img src="./logos/hotemailer.png" alt="Brand 3" class="brand-logo" />
-        <img src="./logos/revoia.png" alt="Brand 4" class="brand-logo" />
-        <img src="./logos/vesaservices.png" alt="Brand 5" class="brand-logo" />
-      </div>
+  <!-- Main Content -->
+  <div class="main-content">
+    <img src="/bg_jpg.jpg" alt="Illustration" class="illustration" />
+    <div class="input-container">
+      <input type="text" placeholder="Paste your link here" class="input-field" />
+      <button class="create-button">CREATE</button>
     </div>
+    <p class="description">
+      Lorem ipsum is simply dummy text of the printing and typesetting
+      industry. Lorem ipsum has been the industry's standard dummy text.
+    </p>
+  </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <p class="footer-text">
-        Copyright &copy; 2024 <a href="#">hie.li</a>. All rights reserved.
-      </p>
-    </footer>
-  </body>
+  <!-- Brands Section -->
+  <div class="brands-section">
+    <div class="brands-container">
+      <img src="./logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
+      <img src="./logos/hotrecruiter.png" alt="Brand 2" class="brand-logo" />
+      <img src="./logos/hotemailer.png" alt="Brand 3" class="brand-logo" />
+      <img src="./logos/revoia.png" alt="Brand 4" class="brand-logo" />
+      <img src="./logos/vesaservices.png" alt="Brand 5" class="brand-logo" />
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p class="footer-text">
+      Copyright &copy; 2024 <a href="#">hie.li</a>. All rights reserved.
+    </p>
+  </footer>
+</body>
+
 </html>
