--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
   <div class="brands-section">
     <div class="brands-container">
       <img src="./logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
-      <img src="./logos/hotrecruiter.png" alt="Brand 2" class="brand-logo" />
-      <img src="./logos/hotemailer.png" alt="Brand 3" class="brand-logo" />
-      <img src="./logos/revoia.png" alt="Brand 4" class="brand-logo" />
-      <img src="./logos/vesaservices.png" alt="Brand 5" class="brand-logo" />
+      <img src="./logos/h1bvisa.png" alt="Brand 2" class="brand-logo" />
+      <img src="./logos/HIT_Logo.png" alt="Brand 3" class="brand-logo" />
+      <img src="./logos/Hotskills_Regular@2x.png" alt="Brand 4" class="brand-logo" />
+      <img src="./logos/Immigration and Jobs Talk Show.png" alt="Brand 5" class="brand-logo" />
+      <img src="./logos/ITPro-logo-final-hq.png" alt="Brand 4" class="brand-logo" />
     </div>
   </div>
 
