--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hielie</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
   <!-- Main Content -->
   <div class="main-content">
-    <img src="/bg_jpg.jpg" alt="Illustration" class="illustration" />
+    <img src="../assets/logos/bg_jpg.jpg" alt="Illustration" class="illustration" />
     <div class="input-container">
       <input type="text" placeholder="Paste your link here" class="input-field" />
       <button class="create-button">CREATE</button>
@@ -45,12 +45,12 @@
   <!-- Brands Section -->
   <div class="brands-section">
     <div class="brands-container">
-      <img src="./logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
-      <img src="./logos/h1bvisa.png" alt="Brand 2" class="brand-logo" />
-      <img src="./logos/HIT_Logo.png" alt="Brand 3" class="brand-logo" />
-      <img src="./logos/Hotskills_Regular@2x.png" alt="Brand 4" class="brand-logo" />
-      <img src="./logos/Immigration and Jobs Talk Show.png" alt="Brand 5" class="brand-logo" />
-      <img src="./logos/ITPro-logo-final-hq.png" alt="Brand 4" class="brand-logo" />
+      <img src="../assets/logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
+      <img src="../assets/logos/h1bvisa.png" alt="Brand 2" class="brand-logo" />
+      <img src="../assets/logos/HIT_Logo.png" alt="Brand 3" class="brand-logo" />
+      <img src="../assets/logos/Hotskills_Regular@2x.png" alt="Brand 4" class="brand-logo" />
+      <img src="../assets/logos/Immigration and Jobs Talk Show.png" alt="Brand 5" class="brand-logo" />
+      <img src="../assets/logos/ITPro-logo-final-hq.png" alt="Brand 4" class="brand-logo" />
     </div>
   </div>
 
