--- a/html/converter.html
+++ b/html/converter.html
@@ -18,9 +18,9 @@
 
         <!-- Navigation Links -->
         <ul class="navbar-menu">
-          <li><a href="compressor.html" class="navbar-link ">COMPRESSOR</a></li>
-          <li><a href="#" class="navbar-link">CONVERTER</a></li>
-          <li><a href="#" class="navbar-link active">SHORTENER</a></li>
+          <li><a href="compressor.html" class="navbar-link">COMPRESSOR</a></li>
+          <li><a href="converter.html" class="navbar-link active">CONVERTER</a></li>
+          <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
 
         <!-- Login Button -->
