--- a/html/compressor.html
+++ b/html/compressor.html
@@ -18,8 +18,8 @@
 
         <!-- Navigation Links -->
         <ul class="navbar-menu">
-          <li><a href="#" class="navbar-link active">COMPRESSOR</a></li>
-          <li><a href="#" class="navbar-link">CONVERTER</a></li>
+          <li><a href="compressor.html" class="navbar-link active">COMPRESSOR</a></li>
+          <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
           <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
 
