--- a/html/converter.html
+++ b/html/converter.html
@@ -48,6 +48,13 @@
         </div>
       </div>
     </div> -->
+    <div class="text" style="padding: 0px; margin: 0px;">
+      <h4 style="margin: 0px; padding: 0px;">Convert Files with Ease</h4>
+      <p style="width: 600px; color:#8c8c8c70; margin: 0px; padding: 20px; ">Tired of struggling to find the right file format? At hie.li, we support a wide range of file conversions, from
+        documents and images to audio and video files. Simply upload your file, choose the format you need, and get your
+        converted file in seconds!</p>
+    </div>
+
 
     <div style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
       <!-- Dropdown and Upload -->
