--- a/html/index.html
+++ b/html/index.html
@@ -45,8 +45,9 @@
   <!-- Main Content -->
   <div class="main-content">
     <img src="../assets/logos/bg_jpg.jpg" alt="Illustration" class="illustration" />
-    <h1>Convert <span class="underlined underline-clip">file</span><br>with<span class="underlined underline-mask">
-        Ease</span><br></h1>
+
+
+    <p id="title_">Shorten Long URLs for <span class="fancy"><br>Easy Sharing</span></p>
 
     <div class="input-container">
       <input type="text" placeholder="Paste your link here" class="input-field" />
