--- a/html/compressor.html
+++ b/html/compressor.html
@@ -9,72 +9,41 @@
 </head>
 
 <body>
-  <!-- Navigation -->
   <nav class="navbar">
     <div class="container">
       <div class="navbar-container">
-        <!-- Logo Section -->
         <a href="#" class="navbar-logo">HIE.LI</a>
-
-        <!-- Navigation Links -->
         <ul class="navbar-menu">
           <li><a href="compressor.html" class="navbar-link active">COMPRESSOR</a></li>
           <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
           <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
-
-        <!-- Login Button -->
         <button class="login-button">LOGIN</button>
       </div>
     </div>
   </nav>
 
-  <!-- Main Content -->
   <div class="main-content">
     <img src="../assets/logos/bg_jpg.jpg" alt="Illustration" class="illustration" />
 
-    <!-- <div class="container-upload">
-      <div class="card">
-        <h3>Convert your files instantly</h3>
-        <div class="drop_box" id="dropBox">
-          <header>
-            <h4>Select File here</h4>
-          </header>
-          <p>Files Supported: PDF, TEXT, DOC, DOCX</p>
-          <input type="file" hidden accept=".doc,.docx,.pdf" id="fileInput" />
-          <button class="btn" id="chooseFileBtn">Choose File</button>
-        </div>
-        <div class="uploaded-file" id="uploadedFile" style="display:none;">
-        </div>
-      </div>
-    </div> -->
-
     <div class="text"
       style="display: flex; flex-direction: column; padding: 0px; margin: 0px; justify-content: center; align-items: center;">
-
-      <!-- <h1>Convert <span class="underlined underline-clip">file</span><br>with<span class="underlined underline-mask">
-          Ease</span><br></h1> -->
-
-
       <div style="text-align: center;">
         <h1
           style="font-size: 3rem; font-weight: bold; background: linear-gradient(to right, #e5dd09, #ee930a, #ce8b28); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin: 0;">
           Compress Large Files in Seconds
         </h1>
         <p style="margin-top: 20px; color: #e2e8f0; font-size: 1.2rem;">
-          Reduce file sizes quickly without losing quality. </p>
+          Reduce file sizes quickly without losing quality.
+        </p>
       </div>
-
-      <!-- <span class="underlined underline-overflow">NFTs</span> -->
-      <p style="width: 600px; color:#8c8c8c70; margin: 0px; padding-bottom: 30px; ">Tired of struggling to find the
+      <p style="width: 600px; color:#8c8c8c70; margin: 0px; padding-bottom: 30px;">Tired of struggling to find the
         Running out of storage or need to send files faster? Our file compression tool reduces the size of your files
         without compromising quality. Compress images, videos, and other large files so you can store, share, and upload
         them more efficiently.</p>
     </div>
 
-
     <div style="display: flex; flex-direction: row; align-items: center; gap: 10px;">
-      <!-- Dropdown and Upload -->
       <div
         style="display: flex; align-items: center; background-color: #2a2a2a; border-radius: 10px; padding: 10px 20px; gap: 10px; width: 300px; justify-content: space-between; position: relative;">
         <div style="position: relative; flex: 1;">
@@ -85,7 +54,6 @@
               style="width: 30px; height: 30px; fill: white; position: absolute; right: 10px;">
               <path d="M12 16.5l-6-6h12l-6 6z" />
             </svg>
-
           </button>
           <div id="dropdownMenu"
             style="display: none; position: absolute; top: 100%; left: 0; background-color: #2a2a2a; border-radius: 5px; margin-top: 5px; overflow: hidden; z-index: 10; width: 100%;">
@@ -106,7 +74,6 @@
           UPLOAD
         </button>
       </div>
-      <!-- Convert Button -->
       <button
         style="background-color: #f0a500; color: black; font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; padding: 15px 80px; border: none; border-radius: 10px; cursor: pointer;"
         onmouseover="this.style.backgroundColor='#d49000';" onmouseout="this.style.backgroundColor='#f0a500';">
@@ -115,7 +82,6 @@
     </div>
   </div>
 
-  <!-- Brands Section -->
   <div class="brands-section">
     <div class="brands-container">
       <img src="../assets/logos/hireitglobal.png" alt="Brand 1" class="brand-logo" />
@@ -127,13 +93,11 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer">
     <p class="footer-text">
       Copyright &copy; 2024 <a href="#">hie.li</a>. All rights reserved.
     </p>
   </footer>
-
 
   <script>
     const dropBox = document.getElementById("dropBox");
@@ -148,22 +112,18 @@
     fileInput.addEventListener("change", function (e) {
       const fileName = e.target.files[0].name;
 
-      // Create the uploaded file view
       let fileContent = `
         <div class="uploaded-file-info">
           <h4>Uploaded File: ${fileName}</h4>
           <button class="btn cancel-btn" id="cancelBtn">Cancel</button>
         </div>`;
 
-      // Hide the upload section and show the uploaded file section
       dropBox.style.display = "none";
       uploadedFile.innerHTML = fileContent;
       uploadedFile.style.display = "block";
 
-      // Add event listener to the cancel button to revert back
       const cancelBtn = document.getElementById("cancelBtn");
       cancelBtn.addEventListener("click", function () {
-        // Clear the file input and revert back to the initial state
         fileInput.value = null;
         dropBox.style.display = "block";
         uploadedFile.style.display = "none";
@@ -180,7 +140,6 @@
       document.getElementById('dropdownMenu').style.display = 'none';
     }
 
-    // Close dropdown when clicking outside
     document.addEventListener('click', function (event) {
       const dropdown = document.getElementById('dropdownMenu');
       const button = document.getElementById('dropdownButton');
