--- a/html/compressor.html
+++ b/html/compressor.html
@@ -18,7 +18,7 @@
           <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
           <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
-        <button class="login-button">LOGIN</button>
+        <button class="login-button"><a href="login.html">LOGIN</a></button>
       </div>
     </div>
   </nav>
