--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         </ul>
 
         <!-- Login Button -->
-        <button class="login-button">LOGIN</button>
+        <button class="login-button"><a href="login.html">LOGIN</a></button>
       </div>
     </div>
   </nav>
