--- a/html/converter.html
+++ b/html/converter.html
@@ -23,7 +23,8 @@
         </ul>
 
         <!-- Login Button -->
-        <button class="login-button"><a href="login.html">LOGIN</a></button>
+        <button class="login-button"><a href="login.html"
+            style="text-decoration: none; color: #1c1c1c;">LOGIN</a></button>
       </div>
     </div>
   </nav>
