--- a/html/compressor.html
+++ b/html/compressor.html
@@ -17,7 +17,7 @@
         <a href="#" class="navbar-logo">HIE.LI</a>
         <!-- Navigation Links -->
         <ul class="navbar-menu">
-          <li><a href="compressor.html" class="navbar-link">COMPRESSOR</a></li>
+          <li><a href="compressor.html" class="navbar-link active">COMPRESSOR</a></li>
           <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
           <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
