--- a/html/index.html
+++ b/html/index.html
@@ -18,14 +18,14 @@
         <a href="#" class="navbar-logo">HIE.LI</a>
         <!-- Navigation Links -->
         <ul class="navbar-menu">
-          <li><a href="compressor.html" class="navbar-link">COMPRESSOR</a></li>
+          <li><a href="compressor.html" class="navbar-link ">COMPRESSOR</a></li>
           <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
-          <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
+          <li><a href="index.html" class="navbar-link active">SHORTENER</a></li>
         </ul>
 
         <!-- Login Button -->
         <button class="login-button">LOGIN</button>
-                <!-- Hamburger Icon -->
+        <!-- Hamburger Icon -->
         <button class="hamburger-icon" onclick="toggleMenu()">
           &#9776; <!-- Unicode for hamburger icon -->
         </button>
