update converter nav bar

--- a/html/converter.html
+++ b/html/converter.html
@@ -23,8 +23,11 @@
         </ul>
 
         <!-- Login Button -->
-        <button class="login-button"><a href="login.html"
-            style="text-decoration: none; color: #1c1c1c;">LOGIN</a></button>
+        <button class="login-button">LOGIN</button>
+                <!-- Hamburger Icon -->
+        <button class="hamburger-icon" onclick="toggleMenu()">
+          &#9776; <!-- Unicode for hamburger icon -->
+        </button>
       </div>
     </div>
   </nav>
@@ -34,7 +37,6 @@
       navbarMenu.classList.toggle('show');
     }
   </script>
-
   <!-- Main Content -->
   <div class="main-content">
     <img src="../assets/logos/bg_jpg.jpg" alt="Illustration" class="illustration" />
